--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="scaling photography business, photo editing, video editing, outsourcing edits, Photo and Video Edits, business growth">
     <link rel="stylesheet" href="styles.css">
     <title>How I Scaled My Photography Business with Help from Photo and Video Edits</title>
+    <link rel="canonical" href="https://sayaka-chan27.github.io/how-i-scaled-by-photography-business-with-help-from-photo-and-video-edits/">
+    <meta name="google-site-verification" content="1w6mbrv97-bFZpNw12j0jG_PhT140n0folpH3iS7O_4" />
 </head>
 <body>
     <header>
